--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_dark"
     tools:context=".MainActivity">
 
 
@@ -22,7 +23,8 @@
         android:layout_height="463dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@android:color/holo_green_light" />
+        android:background="#0099cc00"
+        android:textColor="@android:color/white" />
 
     <EditText
         android:id="@+id/etNewItem"
@@ -32,5 +34,6 @@
         android:layout_alignParentStart="true"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Add new " />
+        android:text="Add new "
+        android:textColor="@android:color/white" />
 </RelativeLayout>
